--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
 
-GROUP=no.nordicsemi.android
+GROUP=no.nordicsemi.android.gradle
 POM_DESCRIPTION=Nordic Android Common Libraries
 POM_URL=https://github.com/NordicSemiconductor/Android-Gradle-Plugins
 POM_SCM_URL=https://github.com/NordicSemiconductor/Android-Gradle-Plugins
