--- a/.github/workflows/deploy-plugins.yml
+++ b/.github/workflows/deploy-plugins.yml
@@ -1,8 +1,5 @@
-name: Deploy artifacts
+name: Deploy plugins to Gradle Portal
 on:
-  push:
-    tags:
-      - '*'
   workflow_dispatch:
 jobs:
   deployToNexus:
@@ -28,4 +25,4 @@ jobs:
         run: |
           echo "${{ secrets.GPG_FILE }}" > sec.gpg.asc
           gpg -d --passphrase "${{ secrets.GPG_FILE_PSWD }}" --batch sec.gpg.asc > sec.gpg
-          fastlane deploy
+          fastlane deployPlugins
