--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -50,6 +50,7 @@ secrets = "2.0.1"
 turbine = "0.12.1"
 markdown = "0.3.0"
 wirePlugin = "4.4.3"
+timber = "5.0.1"
 
 nordic-ble = "2.6.0-alpha03"
 nordic-log = "2.3.0"
@@ -139,6 +140,7 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 markdown = { group = "com.github.jeziellago", name = "compose-markdown", version.ref = "markdown" }
 memfault-cloud = { group = "com.memfault.cloud", name = "cloud-android", version.ref = "memfault-cloud" }
+timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 
 # Nordic
 nordic-ble-ktx = { group = "no.nordicsemi.android", name = "ble-ktx", version.ref = "nordic-ble" }
