--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -54,7 +54,7 @@ markdown = "0.3.0"
 wirePlugin = "4.4.3"
 timber = "5.0.1"
 
-nordic-ble = "2.6.0-alpha04"
+nordic-ble = "2.6.0"
 nordic-dfu = "2.3.0"
 nordic-log = "2.3.0"
 nordic-mcumgr = "1.5.2"
