--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 accompanist = "0.28.0"
 androidDesugarJdkLibs = "1.2.2"
-androidGradlePlugin = "7.4.0"
+androidGradlePlugin = "7.5.0"
 androidxActivity = "1.6.1"
 androidxAnnotation = "1.5.0"
 androidxAppCompat = "1.6.0"
 androidxComposeBom = "2023.01.00"
-androidxComposeCompiler = "1.4.0-alpha02"
+androidxComposeCompiler = "1.4.0"
 androidxComposeRuntimeTracing = "1.0.0-alpha01"
 androidxCore = "1.9.0"
 androidxCoreSplashscreen = "1.0.0"
