--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,15 +53,16 @@ turbine = "0.12.1"
 markdown = "0.3.0"
 wirePlugin = "4.4.3"
 timber = "5.0.1"
+chart = "v3.1.0"
 
 nordic-ble = "2.6.0"
 nordic-dfu = "2.3.0"
 nordic-log = "2.3.0"
 nordic-mcumgr = "1.5.2"
 nordic-scanner = "1.6.0"
-nordic-common = "1.3.8"
+nordic-common = "1.3.9"
 nordic-memfault = "1.0.2"
-nordicPlugins = "1.2.0"
+nordicPlugins = "1.2.2"
 
 [libraries]
 accompanist-flowlayout = { group = "com.google.accompanist", name = "accompanist-flowlayout", version.ref = "accompanist" }
@@ -152,6 +153,7 @@ room-compiler = { group = "androidx.room", name = "room-compiler", version.ref =
 markdown = { group = "com.github.jeziellago", name = "compose-markdown", version.ref = "markdown" }
 memfault-cloud = { group = "com.memfault.cloud", name = "cloud-android", version.ref = "memfault-cloud" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
+chart = { group = "com.github.PhilJay", name = "MPAndroidChart", version.ref = "chart" }
 
 # Nordic
 nordic-ble-ktx = { group = "no.nordicsemi.android", name = "ble-ktx", version.ref = "nordic-ble" }
