--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ androidxActivity = "1.6.1"
 androidxAnnotation = "1.5.0"
 androidxAppCompat = "1.6.0"
 androidxComposeBom = "2023.01.00"
-androidxComposeCompiler = "1.4.0-alpha05"
+androidxComposeCompiler = "1.4.1-dev-k1.8.10-c312d77f4cb"
 androidxComposeRuntimeTracing = "1.0.0-alpha01"
 androidxCore = "1.9.0"
 androidxCoreSplashscreen = "1.0.0"
