--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -65,7 +65,7 @@ nordic-common = "1.4.3"
 nordic-memfault = "1.0.2"
 nordicPlugins = "1.3.0"
 googleServicesPlugins = "4.3.15"
-firebaseCrashlyticsPlugins = "4.5.1"
+firebaseCrashlyticsPlugins = "2.9.2"
 
 [libraries]
 accompanist-flowlayout = { group = "com.google.accompanist", name = "accompanist-flowlayout", version.ref = "accompanist" }
@@ -205,4 +205,4 @@ secrets = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugi
 publish = { id = "com.gradle.plugin-publish", version.ref = "publishPlugin" }
 wire = { id = "com.squareup.wire", version.ref = "wirePlugin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "googleServicesPlugins" }
-firebase-crashlytics = { id = "com.squareup.wire", version.ref = "firebaseCrashlyticsPlugins" }
+firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsPlugins" }
