--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ androidxActivity = "1.7.0"
 androidxAnnotation = "1.6.0"
 androidxAppCompat = "1.6.1"
 androidxComposeBom = "2023.04.00" # https://developer.android.com/jetpack/compose/bom/bom-mapping
-androidxComposeCompiler = "1.4.4-dev-k1.8.20-f6ae19e64ff"
+androidxComposeCompiler = "1.4.5"
 androidxComposeRuntimeTracing = "1.0.0-alpha03"
 androidxCore = "1.10.0"
 androidxCoreSplashscreen = "1.0.0"
