--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -55,6 +55,9 @@ wirePlugin = "4.7.0"
 timber = "5.0.1"
 chart = "v3.1.0"
 leakcanary = "2.11"
+mockk = "1.13.5"
+slf4j = "2.0.5"
+robolectric = "4.10.3"
 
 nordic-blek = "0.1.3"
 nordic-ble = "2.6.1"
@@ -159,6 +162,9 @@ memfault-cloud = { group = "com.memfault.cloud", name = "cloud-android", version
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 chart = { group = "com.github.PhilJay", name = "MPAndroidChart", version.ref = "chart" }
 leakcanary = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanary" }
+test-slf4j-simple = { group = "io.mockk", name = "slf4j-simple", version.ref = "slf4j" }
+test-mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
+test-mockk = { group = "org.robolectric", name = "robolectric", version.ref = "mockk" }
 
 # Nordic
 nordic-ble-ktx = { group = "no.nordicsemi.android", name = "ble-ktx", version.ref = "nordic-ble" }
