--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -70,7 +70,7 @@ nordic-mcumgr = "1.6.0"
 nordic-scanner = "1.6.0"
 nordic-common = "1.7.1"
 nordic-memfault = "1.0.2"
-nordicPlugins = "1.4.6"
+nordicPlugins = "1.5.11"
 googleServicesPlugins = "4.3.15"
 firebaseCrashlyticsPlugins = "2.9.2"
 
@@ -231,3 +231,4 @@ publish = { id = "com.gradle.plugin-publish", version.ref = "publishPlugin" }
 wire = { id = "com.squareup.wire", version.ref = "wirePlugin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "googleServicesPlugins" }
 firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsPlugins" }
+common-theme-plugin = {id = "no.nordicsemi.android.common.theme.AAA", version.ref = "nordicPlugins"}
