Revert "Bump material to beta versions"
This reverts commit 569cce71f0686b076fb6e1952e5b8b83a2d23a3e.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -64,8 +64,6 @@ moshiAdapters = "1.15.0"
 moshiConverter = "2.9.0"
 moshi = "1.15.0"
 moshiKotlinCodegen = "1.15.0"
-material3 = "1.2.0-alpha11"
-material = "1.6.0-beta01"
 
 nordic-blek = "1.0.9"
 nordic-ble = "2.7.2"
@@ -95,9 +93,9 @@ androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-mac
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
 androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
-androidx-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "material" }
-androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+androidx-compose-material = { group = "androidx.compose.material", name = "material" }
 androidx-compose-material-iconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-material3-windowSizeClass = {group = "androidx.compose.material3", name = "material3-window-size-class" }
 androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 androidx-compose-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata" }
